-issue#5936: If a Remote Data Collector has not devices, poller.php does not properly register any collectors
-issue#5964: Graph Timespans too far into the past generate RRDtool crashes
-issue#5967: Removing dygraph-combined.js as we are not using it and have adequate charting libraries
-issue#5968: Removing jQuery Sparklines API as we are not using it and have adequate charting libraries
-feature#412: Import Export for Graph and Tree rules
-feature#1214: Move Tree Create/Remove/Modify Functions to lib/api_tree.php
-feature#1361: UI should update alternate row colors
-feature#1398: Implement an interactive web based Plugin upgrade process
-feature#1442: Add validation to GUI inputs
-feature#1523: Value above RRD maximum value
-feature#1585: Confirmation screen should show what options have been picked
-feature#1987: Plugins should be able to be downloaded, installed, and upgraded from Plugin Management
-feature#2166: LDAP configuration should only use 'user_domains_ldap'
-feature#2429: Allow Device SNMP Options to be Templated
-feature#2437: Create system-wide Proxy settings for plugins
-feature#2439: Allow CDEF to be used as a filter for Graph/Graph Templates
-feature#2474: Enable better version reporting for GitHub/Source/Package editions
-feature#2550: Enable use of authenticator codes for Two-Factor Authentication
-feature#2572: Support Sorting of Tree or Graph View by Data Source
-feature#2607: Allow adding sites from command line
-feature#2738: Set cache rebuild process indicator for the Cacti UI
-feature#2767: Plugins should be temporarily disabled if a required plugin is also disabled
-feature#2959: Add multi threading for push out hosts (cli)
-feature#3048: Allow different log settings for remote pollers
-feature#3139: Added option in CLI tool remove_graphs for deletion of single graph
-feature#3187: Feature: rra path should be configurable
-feature#3192: Add ability to change options in AUTOM8 networks